[gd_scene load_steps=36 format=2]

[ext_resource path="res://other/fonts/roboto_mono_italic.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scripts/menu.gd" type="Script" id=2]
[ext_resource path="res://images/GUI/particle.png" type="Texture" id=3]
[ext_resource path="res://theme.tres" type="Theme" id=4]
[ext_resource path="res://images/mainsprites/void/void_eye.png" type="Texture" id=5]
[ext_resource path="res://images/GUI/Mortes.png" type="Texture" id=6]
[ext_resource path="res://images/GUI/Lampi√µes.png" type="Texture" id=7]
[ext_resource path="res://images/GUI/relogio.png" type="Texture" id=8]
[ext_resource path="res://images/mainsprites/void/hatoid.png" type="Texture" id=9]

[sub_resource type="Gradient" id=5]
offsets = PoolRealArray( 0.0350877, 0.245614, 0.675439, 1 )
colors = PoolColorArray( 0.764706, 0.764706, 0.764706, 0, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 0.258824 )

[sub_resource type="GradientTexture" id=6]
gradient = SubResource( 5 )

[sub_resource type="ParticlesMaterial" id=4]
lifetime_randomness = 0.37
flag_disable_z = true
direction = Vector3( 1, -100, 0 )
flatness = 0.13
gravity = Vector3( 0, 0, 0 )
initial_velocity = 200.0
angular_velocity = 76.8
angular_velocity_random = 0.55
orbit_velocity = 0.0
orbit_velocity_random = 0.0
angle = 96.0
angle_random = 0.29
scale = 0.5
scale_random = 0.68
color_ramp = SubResource( 6 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 25, 32 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 5 )
region = Rect2( 25, 0, 25, 32 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 5 )
region = Rect2( 50, 0, 25, 32 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 5 )
region = Rect2( 75, 0, 25, 32 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 5 )
region = Rect2( 100, 0, 25, 32 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 5 )
region = Rect2( 125, 0, 25, 32 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 5 )
region = Rect2( 150, 0, 25, 32 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 5 )
region = Rect2( 175, 0, 25, 32 )

[sub_resource type="SpriteFrames" id=9]
animations = [ {
"frames": [ SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="DynamicFont" id=26]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=23]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=24]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=25]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=1]
size = 55
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 35
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 35
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=7]
size = 35
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=27]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=8]
size = 40
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=12]
size = 50
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=22]
size = 40
font_data = ExtResource( 1 )

[sub_resource type="Animation" id=10]
resource_name = "FadeMenu"
length = 1.6
tracks/0/type = "value"
tracks/0/path = NodePath("Fade:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AnimatedSprite:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0, 0, 0, 1 ) ]
}

[sub_resource type="Animation" id=11]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Fade:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AnimatedSprite:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[node name="CanvasLayer" type="CanvasLayer"]
layer = 2
script = ExtResource( 2 )
__meta__ = {
"_edit_horizontal_guides_": [ 360.0 ],
"_edit_vertical_guides_": [ 640.0 ]
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.760784 )

[node name="Particles2D" type="Particles2D" parent="."]
modulate = Color( 0, 0, 0, 0.784314 )
position = Vector2( 650, 753 )
amount = 50
lifetime = 5.0
explosiveness = 0.12
randomness = 0.14
fixed_fps = 60
draw_order = 1
process_material = SubResource( 4 )
texture = ExtResource( 3 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 1307, 763 )
scale = Vector2( 70, 70 )
frames = SubResource( 9 )

[node name="Rank" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 930.0
margin_top = 488.0
margin_right = -50.0
margin_bottom = -82.0
grow_horizontal = 0
grow_vertical = 0

[node name="CenterContainer" type="CenterContainer" parent="Rank"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -25.0
margin_top = -51.0
margin_right = -217.0
margin_bottom = -101.0
grow_horizontal = 0
grow_vertical = 0
rect_scale = Vector2( 2.5, 2.5 )

[node name="VBoxContainer" type="VBoxContainer" parent="Rank/CenterContainer"]
margin_right = 108.0
margin_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2

[node name="LastTime" type="Label" parent="Rank/CenterContainer/VBoxContainer"]
margin_right = 108.0
margin_bottom = 22.0
rect_min_size = Vector2( 100, 0 )
custom_fonts/font = SubResource( 26 )
text = "Ultimo Tempo"

[node name="HBoxContainer" type="HBoxContainer" parent="Rank/CenterContainer/VBoxContainer"]
margin_top = 26.0
margin_right = 108.0
margin_bottom = 48.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Rank/CenterContainer/VBoxContainer/HBoxContainer"]
margin_right = 13.0
margin_bottom = 22.0
alignment = 1

[node name="TextureRect" type="TextureRect" parent="Rank/CenterContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 5.0
margin_right = 13.0
margin_bottom = 17.0
texture = ExtResource( 6 )

[node name="Deaths" type="Label" parent="Rank/CenterContainer/VBoxContainer/HBoxContainer"]
margin_left = 17.0
margin_right = 17.0
margin_bottom = 22.0
custom_fonts/font = SubResource( 23 )

[node name="HBoxContainer2" type="HBoxContainer" parent="Rank/CenterContainer/VBoxContainer"]
margin_top = 52.0
margin_right = 108.0
margin_bottom = 74.0

[node name="VBoxContainer" type="VBoxContainer" parent="Rank/CenterContainer/VBoxContainer/HBoxContainer2"]
margin_right = 11.0
margin_bottom = 22.0
alignment = 1

[node name="TextureRect" type="TextureRect" parent="Rank/CenterContainer/VBoxContainer/HBoxContainer2/VBoxContainer"]
margin_top = 4.0
margin_right = 11.0
margin_bottom = 17.0
grow_horizontal = 0
grow_vertical = 0
texture = ExtResource( 7 )

[node name="Lamps" type="Label" parent="Rank/CenterContainer/VBoxContainer/HBoxContainer2"]
margin_left = 15.0
margin_right = 15.0
margin_bottom = 22.0
custom_fonts/font = SubResource( 24 )

[node name="HBoxContainer3" type="HBoxContainer" parent="Rank/CenterContainer/VBoxContainer"]
margin_top = 78.0
margin_right = 108.0
margin_bottom = 100.0
grow_horizontal = 0
grow_vertical = 0

[node name="VBoxContainer" type="VBoxContainer" parent="Rank/CenterContainer/VBoxContainer/HBoxContainer3"]
margin_right = 9.0
margin_bottom = 22.0
alignment = 1

[node name="TextureRect" type="TextureRect" parent="Rank/CenterContainer/VBoxContainer/HBoxContainer3/VBoxContainer"]
margin_top = 3.0
margin_right = 9.0
margin_bottom = 18.0
grow_horizontal = 0
grow_vertical = 0
texture = ExtResource( 8 )

[node name="Time" type="Label" parent="Rank/CenterContainer/VBoxContainer/HBoxContainer3"]
margin_left = 13.0
margin_right = 13.0
margin_bottom = 22.0
grow_horizontal = 0
custom_fonts/font = SubResource( 25 )

[node name="Menu" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 4 )

[node name="HBoxContainer" type="HBoxContainer" parent="Menu"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Control" type="Control" parent="Menu/HBoxContainer"]
margin_right = 100.0
margin_bottom = 720.0
rect_min_size = Vector2( 100, 0 )

[node name="CenterContainer" type="CenterContainer" parent="Menu/HBoxContainer"]
margin_left = 104.0
margin_right = 488.0
margin_bottom = 720.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Menu/HBoxContainer/CenterContainer"]
margin_top = 122.0
margin_right = 384.0
margin_bottom = 597.0
grow_horizontal = 0
grow_vertical = 0
rect_min_size = Vector2( 350, 0 )
size_flags_horizontal = 0
size_flags_vertical = 0
custom_constants/separation = 20
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Menu/HBoxContainer/CenterContainer/VBoxContainer"]
margin_right = 384.0
margin_bottom = 73.0
custom_fonts/font = SubResource( 1 )
text = "OblivionTale"

[node name="play" type="Button" parent="Menu/HBoxContainer/CenterContainer/VBoxContainer"]
margin_top = 93.0
margin_right = 384.0
margin_bottom = 140.0
theme = ExtResource( 4 )
custom_fonts/font = SubResource( 2 )
text = "Iniciar"
align = 0

[node name="continue" type="Button" parent="Menu/HBoxContainer/CenterContainer/VBoxContainer"]
margin_top = 160.0
margin_right = 384.0
margin_bottom = 207.0
custom_fonts/font = SubResource( 2 )
text = "Continuar"
align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="credits" type="Button" parent="Menu/HBoxContainer/CenterContainer/VBoxContainer"]
margin_top = 227.0
margin_right = 384.0
margin_bottom = 274.0
custom_fonts/font = SubResource( 3 )
text = "Creditos"
align = 0

[node name="options" type="Button" parent="Menu/HBoxContainer/CenterContainer/VBoxContainer"]
margin_top = 294.0
margin_right = 384.0
margin_bottom = 341.0
custom_fonts/font = SubResource( 3 )
text = "Op√ß√µes"
align = 0

[node name="extras" type="Button" parent="Menu/HBoxContainer/CenterContainer/VBoxContainer"]
visible = false
margin_top = 361.0
margin_right = 384.0
margin_bottom = 408.0
custom_fonts/font = SubResource( 3 )
text = "Extras"
align = 0

[node name="quit" type="Button" parent="Menu/HBoxContainer/CenterContainer/VBoxContainer"]
margin_top = 361.0
margin_right = 384.0
margin_bottom = 408.0
custom_fonts/font = SubResource( 3 )
text = "Sair"
align = 0

[node name="Label2" type="Label" parent="Menu/HBoxContainer/CenterContainer/VBoxContainer"]
margin_top = 428.0
margin_right = 384.0
margin_bottom = 475.0
custom_fonts/font = SubResource( 7 )
text = "1.0"
align = 1

[node name="Creditos" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( -495, 24 )

[node name="ColorRect" type="ColorRect" parent="Creditos"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="CenterContainer" type="CenterContainer" parent="Creditos"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="HBoxContainer" type="HBoxContainer" parent="Creditos/CenterContainer"]
margin_left = 50.0
margin_top = 70.0
margin_right = 1229.0
margin_bottom = 650.0

[node name="VBoxContainer" type="VBoxContainer" parent="Creditos/CenterContainer/HBoxContainer"]
margin_right = 1179.0
margin_bottom = 580.0

[node name="Label" type="Label" parent="Creditos/CenterContainer/HBoxContainer/VBoxContainer"]
margin_right = 1179.0
margin_bottom = 247.0
custom_fonts/font = SubResource( 27 )
text = "Developer:
Jonapii

Beta Testing: 
DrekDesu
Sr.Lu
GBM
Pablopel

Audio:"
align = 1

[node name="Label2" type="Label" parent="Creditos/CenterContainer/HBoxContainer/VBoxContainer"]
margin_top = 251.0
margin_right = 1179.0
margin_bottom = 523.0
custom_fonts/font = SubResource( 27 )
text = "S: TV Static Looping by dotY21 | License: Creative Commons 0 | Timestamp: 2023-12-30 21:22:59.498229
S: Mozar21stPC41.mp3 by Teo4 | License: Attribution NonCommercial 3.0 | Timestamp: 2023-12-30 21:10:22.870980
S: Menu Select Tick by el_boss | License: Creative Commons 0 | Timestamp: 2023-12-30 20:16:28.326759
S: HorrorSting3.mp3 by shelbyshark | License: Creative Commons 0 | Timestamp: 2023-12-30 20:08:54.447250
S: Fire - Effects - Swooshes - Bursts, evolving by GregorQuendel | License: Attribution 4.0 | Timestamp: 2023-12-30 19:40:10.285628
S: finger hit high glass bowl 7.mp3 by ascap | License: Attribution NonCommercial 4.0 | Timestamp: 2023-12-30 19:34:15.268050
S: Deslizamiento de espada.wav by Josethehedgehog | License: Creative Commons 0 | Timestamp: 2023-12-30 19:23:28.980522
S: Jumping on grass 3.wav by Coolshows101sound | License: Attribution 4.0 | Timestamp: 2023-12-30 18:56:28.890345
Dark Ambiences Pad Showdown | Sonniss.com - GDC 2023 - Game Audio Bundle
Forest, Daytime, Birds, Outdoors, Nature, Spring | Sonniss.com - GDC 2023 - Game Audio Bundle
grass 3 single step 3 | Sonniss.com - GDC 2023 - Game Audio Bundle"

[node name="Back1" type="Button" parent="Creditos/CenterContainer/HBoxContainer/VBoxContainer"]
margin_top = 527.0
margin_right = 1179.0
margin_bottom = 580.0
theme = ExtResource( 4 )
custom_fonts/font = SubResource( 8 )
text = "<--"

[node name="Op√ß√µes" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( -495, 24 )

[node name="ColorRect" type="ColorRect" parent="Op√ß√µes"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="CenterContainer" type="CenterContainer" parent="Op√ß√µes"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="HBoxContainer" type="HBoxContainer" parent="Op√ß√µes/CenterContainer"]
margin_left = 532.0
margin_top = 241.0
margin_right = 747.0
margin_bottom = 479.0

[node name="VBoxContainer" type="VBoxContainer" parent="Op√ß√µes/CenterContainer/HBoxContainer"]
margin_right = 215.0
margin_bottom = 181.0

[node name="IdiomaDesc" type="Label" parent="Op√ß√µes/CenterContainer/HBoxContainer/VBoxContainer"]
margin_right = 215.0
margin_bottom = 67.0
custom_fonts/font = SubResource( 12 )
text = "Idioma1"

[node name="Idioma" type="Button" parent="Op√ß√µes/CenterContainer/HBoxContainer/VBoxContainer"]
margin_top = 71.0
margin_right = 215.0
margin_bottom = 124.0
theme = ExtResource( 4 )
custom_fonts/font = SubResource( 8 )
text = "Idioma"

[node name="CheckButton" type="CheckButton" parent="Op√ß√µes/CenterContainer/HBoxContainer/VBoxContainer"]
margin_top = 128.0
margin_right = 215.0
margin_bottom = 181.0
theme = ExtResource( 4 )
custom_fonts/font = SubResource( 22 )
text = "Timer"

[node name="Back2" type="Button" parent="Op√ß√µes/CenterContainer/HBoxContainer/VBoxContainer"]
margin_left = -497.0
margin_top = -234.0
margin_right = -282.0
margin_bottom = -181.0
theme = ExtResource( 4 )
custom_fonts/font = SubResource( 8 )
text = "<--"

[node name="Extras" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( -495, 24 )

[node name="ColorRect" type="ColorRect" parent="Extras"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.392157 )

[node name="CenterContainer" type="CenterContainer" parent="Extras"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="HBoxContainer" type="HBoxContainer" parent="Extras/CenterContainer"]
margin_left = 538.0
margin_top = 326.0
margin_right = 741.0
margin_bottom = 393.0

[node name="VBoxContainer" type="VBoxContainer" parent="Extras/CenterContainer/HBoxContainer"]
margin_right = 203.0
margin_bottom = 67.0

[node name="ExtraDesc" type="Label" parent="Extras/CenterContainer/HBoxContainer/VBoxContainer"]
margin_right = 203.0
margin_bottom = 67.0
custom_fonts/font = SubResource( 12 )
text = "Extras1"

[node name="Fade" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0, 0, 0, 0 )

[node name="FadeM" type="AnimationPlayer" parent="."]
anims/FadeMenu = SubResource( 10 )
anims/RESET = SubResource( 11 )

[node name="Hatoid" type="Sprite" parent="."]
visible = false
position = Vector2( 1290, 78 )
scale = Vector2( 70, 70 )
texture = ExtResource( 9 )

[connection signal="focus_entered" from="Menu/HBoxContainer/CenterContainer/VBoxContainer/play" to="." method="_on_focus_entered"]
[connection signal="mouse_entered" from="Menu/HBoxContainer/CenterContainer/VBoxContainer/play" to="." method="_on_focus_entered"]
[connection signal="pressed" from="Menu/HBoxContainer/CenterContainer/VBoxContainer/play" to="." method="_on_Play_pressed"]
[connection signal="focus_entered" from="Menu/HBoxContainer/CenterContainer/VBoxContainer/continue" to="." method="_on_focus_entered"]
[connection signal="mouse_entered" from="Menu/HBoxContainer/CenterContainer/VBoxContainer/continue" to="." method="_on_focus_entered"]
[connection signal="pressed" from="Menu/HBoxContainer/CenterContainer/VBoxContainer/continue" to="." method="_on_Continue_pressed"]
[connection signal="focus_entered" from="Menu/HBoxContainer/CenterContainer/VBoxContainer/credits" to="." method="_on_focus_entered"]
[connection signal="mouse_entered" from="Menu/HBoxContainer/CenterContainer/VBoxContainer/credits" to="." method="_on_focus_entered"]
[connection signal="pressed" from="Menu/HBoxContainer/CenterContainer/VBoxContainer/credits" to="." method="_on_Credits_pressed"]
[connection signal="focus_entered" from="Menu/HBoxContainer/CenterContainer/VBoxContainer/options" to="." method="_on_focus_entered"]
[connection signal="mouse_entered" from="Menu/HBoxContainer/CenterContainer/VBoxContainer/options" to="." method="_on_focus_entered"]
[connection signal="pressed" from="Menu/HBoxContainer/CenterContainer/VBoxContainer/options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="Menu/HBoxContainer/CenterContainer/VBoxContainer/extras" to="." method="_on_extras_pressed"]
[connection signal="focus_entered" from="Menu/HBoxContainer/CenterContainer/VBoxContainer/quit" to="." method="_on_focus_entered"]
[connection signal="mouse_entered" from="Menu/HBoxContainer/CenterContainer/VBoxContainer/quit" to="." method="_on_focus_entered"]
[connection signal="pressed" from="Menu/HBoxContainer/CenterContainer/VBoxContainer/quit" to="." method="_on_Quit_pressed"]
[connection signal="focus_entered" from="Creditos/CenterContainer/HBoxContainer/VBoxContainer/Back1" to="." method="_on_focus_entered"]
[connection signal="mouse_entered" from="Creditos/CenterContainer/HBoxContainer/VBoxContainer/Back1" to="." method="_on_focus_entered"]
[connection signal="pressed" from="Creditos/CenterContainer/HBoxContainer/VBoxContainer/Back1" to="." method="_on_Back1_pressed"]
[connection signal="focus_entered" from="Op√ß√µes/CenterContainer/HBoxContainer/VBoxContainer/Idioma" to="." method="_on_focus_entered"]
[connection signal="mouse_entered" from="Op√ß√µes/CenterContainer/HBoxContainer/VBoxContainer/Idioma" to="." method="_on_focus_entered"]
[connection signal="pressed" from="Op√ß√µes/CenterContainer/HBoxContainer/VBoxContainer/Idioma" to="." method="_on_Idioma_pressed"]
[connection signal="focus_entered" from="Op√ß√µes/CenterContainer/HBoxContainer/VBoxContainer/CheckButton" to="." method="_on_focus_entered"]
[connection signal="mouse_entered" from="Op√ß√µes/CenterContainer/HBoxContainer/VBoxContainer/CheckButton" to="." method="_on_focus_entered"]
[connection signal="toggled" from="Op√ß√µes/CenterContainer/HBoxContainer/VBoxContainer/CheckButton" to="." method="_on_CheckButton_toggled"]
[connection signal="focus_entered" from="Op√ß√µes/CenterContainer/HBoxContainer/VBoxContainer/Back2" to="." method="_on_focus_entered"]
[connection signal="mouse_entered" from="Op√ß√µes/CenterContainer/HBoxContainer/VBoxContainer/Back2" to="." method="_on_focus_entered"]
[connection signal="pressed" from="Op√ß√µes/CenterContainer/HBoxContainer/VBoxContainer/Back2" to="." method="_on_Back2_pressed"]
